[package]
name = "bomby"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy_ecs_ldtk = "0.8"
bevy-inspector-egui = "0.22"
bevy_kira_audio = { version = "0.18", features = ["wav"] }
bevy_ninepatch = "0.10"
iyes_loopless = "0.9"
leafwing-input-manager = "0.11"

itertools = "0.12"
noise = { git = "https://github.com/bsurmanski/noise-rs", rev = "5abdde1b819eccc47e74969c15e1b56ae5a055d6" }
rand = { version = "0.8", default_features = false, features = ["std", "small_rng"] }

[dependencies.bevy]
version = "0.12"
default_features = false
features = [ "png", "x11" ]

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]
